[package]
name = "GS014_v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
dotenv = "0.15.0"
actix-cors = "0.6.4"
base64 = "0.21.2"