[package]
name = "GS014_v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
dotenv = "0.15.0"
actix-cors = "0.6.4"
base64 = "0.21.2"
to-binary = "0.4.0"
num = "0.4"
local-ip-address = "0.5.3"